--- a/server/views/emails/passwordReset/html.pug
+++ b/server/views/emails/passwordReset/html.pug
@@ -1,7 +1,7 @@
 extends ../template/default
 
 block content
-  p Hello, #{user.username},
+  p Hello, #{name},
   p click the link below to reset your password
   .text-center
     a.btn(href= target='_blank') Reset Password
