--- a/server/views/emails/passwordReset/html.pug
+++ b/server/views/emails/passwordReset/html.pug
@@ -4,10 +4,10 @@ block content
   p Hello, #{name},
   p click the link below to reset your password
   .text-center
-    a.btn(href= target='_blank') Reset Password
+    a Reset Password
 
   p alternatively use the following link :
   p
-    a(href= target='_blank') #{}
+    a Sup
   p This link expires after 24 hours.
   p If you did not request a change of password, please ignore this e-mail.
