--- a/server/views/emails/passwordReset/html.pug
+++ b/server/views/emails/passwordReset/html.pug
@@ -2,12 +2,9 @@ extends ../template/default
 
 block content
   p Hello, #{name},
-  p click the link below to reset your password
+  p Use the following token to reset your password
   .text-center
-    a Reset Password
+    a #{token}
 
-  p alternatively use the following link :
-  p
-    a Sup
-  p This link expires after 24 hours.
+  p This token expires after 24 hours.
   p If you did not request a change of password, please ignore this e-mail.
