--- a/server/views/emails/contactUs/html.pug
+++ b/server/views/emails/contactUs/html.pug
@@ -1,19 +1,16 @@
 div
   | The following message was sent using the We Share a Share app #[strong Contact Us] form,
   h3 Message
-  | !{message}
+  | !{contact.message}
   hr
 div
   h3 Additional information
   p
     strong Name:
-    |  #{ from.name }
+    |  #{ contact.firstName } #{ contact.lastName }
   p
     strong Email:
-    |  #{ from.email }
+    |  #{ contact.email }
   p
     strong Subject:
-    |  #{ subject }
-  p
-    strong User was authenticated:
-    |  #{ from.authenticated ? 'Yes' : 'No' }
+    |  #{ contact.subject }
