--- a/server/views/emails/register/html.pug
+++ b/server/views/emails/register/html.pug
@@ -8,7 +8,7 @@ block content
     You can now fill the onboarding forms and then support our available causes.
 
   p
-    div Username: #{name}
+    div Name: #{name}
     div Email: #{email}
 
   p Thank you again for your registration. If you have any questions, please feel free to contact us!
