Email errors corrected

--- a/server/views/emails/onboarding/html.pug
+++ b/server/views/emails/onboarding/html.pug
@@ -1,7 +1,7 @@
 extends ../template/default
 
 block content
-  p Hello, #{name},
+  p Hello #{name},
   p Thank you for filling the on-boarding forms. Your PPR is almost done. All we need now is for you to check that the documents sent in attachment are correct and sign them.
 
   p If you did not request a Stoik PPR, please ignore this e-mail.
