Sending form emails correctly and in portuguese

--- a/server/views/emails/onboarding/html.pug
+++ b/server/views/emails/onboarding/html.pug
@@ -1,7 +1,21 @@
 extends ../template/default
 
 block content
-  p Hello #{name},
-  p Thank you for filling the on-boarding forms. Your PPR is almost done. All we need now is for you to check that the documents sent in attachment are correct and sign them.
+  p Caro #{name},
 
-  p If you did not request a Stoik PPR, please ignore this e-mail.
+  p Os documentos em anexo encontram-se pré-preenchidos com os dados fornecidos na aplicação. Poderá editar ou acrescentar alguma informação, se for necessário.
+  p
+  | Os documentos deverão ser assinados e enviados para pprsgfstoikacoes@sgf.pt. Poderá encontrar mais informação em
+  | <a href="http://www.stoikcapital.com">www.stoikcapital.com</a>
+  | ou
+  | <a href="http://www.weshareashare.org">www.weshareashare.org</a>
+  | .
+
+  p
+  | O Regulamento de Gestão PPR SGF Stoik Ações e aInformação Fundamental ao Investidor estão disponíveis em:
+  | <http://a href="www.sgf.pt">Sociedade Gestora de Fundos de Pensões</a>
+  | .
+
+  p Alguma questão contacte-nos em info@stoikcapital.com ou info@weshareashare.org!
+
+  p Melhores Cumprimentos,
