--- a/server/views/emails/register/html.pug
+++ b/server/views/emails/register/html.pug
@@ -1,14 +1,10 @@
 extends ../template/default
 
 block content
-  p Welcome, #{name},
+  p Caro #{name},
+  p Bem-vindo! O seu registo foi efectuado com sucesso.
+  p Poderá agora conhecer melhor o PPR SGF Stoik Ações e o nosso projecto de impacto WeShareAShare.
 
-  p.
-    You're now registered in the WeShareAShare platform.
-    You can now fill the onboarding forms and then support our available causes.
+  p Se tiver alguma questão, contacte-nos em info@stoikcapital.com ou info@weshareashare.org!
 
-  p
-    div Name: #{name}
-    div Email: #{email}
-
-  p Thank you again for your registration. If you have any questions, please feel free to contact us!
+  p Obrigado,
