Add I18n default locale

--- a/server/views/emails/onboarding/html.pug
+++ b/server/views/emails/onboarding/html.pug
@@ -5,17 +5,24 @@ block content
 
   p Os documentos em anexo encontram-se pré-preenchidos com os dados fornecidos na aplicação. Poderá editar ou acrescentar alguma informação, se for necessário.
   p
-  | Os documentos deverão ser assinados e enviados para pprsgfstoikacoes@sgf.pt. Poderá encontrar mais informação em
+  | Os documentos deverão ser assinados e enviados para
+  | <a href="mailto:pprsgfstoikacoes@sgf.pt">pprsgfstoikacoes@sgf.pt</a>
+  |. Poderá encontrar mais informação em
   | <a href="http://www.stoikcapital.com">www.stoikcapital.com</a>
   | ou
   | <a href="http://www.weshareashare.org">www.weshareashare.org</a>
-  | .
+  |.
 
   p
   | O Regulamento de Gestão PPR SGF Stoik Ações e aInformação Fundamental ao Investidor estão disponíveis em:
   | <http://a href="www.sgf.pt">Sociedade Gestora de Fundos de Pensões</a>
-  | .
+  |.
 
-  p Alguma questão contacte-nos em info@stoikcapital.com ou info@weshareashare.org!
+  p
+  | Alguma questão contacte-nos em
+  | <a href="mailto:info@stoikcapital.com">info@stoikcapital.com</a>
+  | ou
+  | <a href="mailto:info@weshareashare.org">info@weshareashare.org</a>
+  |!
 
   p Melhores Cumprimentos,
