--- a/server/views/emails/register/html.pug
+++ b/server/views/emails/register/html.pug
@@ -5,6 +5,12 @@ block content
   p Bem-vindo! O seu registo foi efectuado com sucesso.
   p Poderá agora conhecer melhor o PPR SGF Stoik Ações e o nosso projecto de impacto WeShareAShare.
 
-  p Se tiver alguma questão, contacte-nos em info@stoikcapital.com ou info@weshareashare.org!
+  p
+  | Se tiver alguma questão, contacte-nos em
+  | <a href="mailto:info@stoikcapital.com">info@stoikcapital.com</a>
+  | ou
+  | <a href="mailto:info@weshareashare.org">info@weshareashare.org</a>
+  |!
+
 
   p Obrigado,
