--- a/server/views/emails/template/default.pug
+++ b/server/views/emails/template/default.pug
@@ -12,7 +12,7 @@ html
 
       .footer
         .text-center
-          .strong WeShareAShare
+          .strong PPR SGF Stoik Ações
         |--
         small
           p
