--- a/server/views/emails/onboarding/html.pug
+++ b/server/views/emails/onboarding/html.pug
@@ -1,7 +1,7 @@
 extends ../template/default
 
 block content
-  p Caro #{name},
+  p Caro(a) #{name},
 
   p Os documentos em anexo encontram-se pré-preenchidos com os dados fornecidos na aplicação. Poderá editar ou acrescentar alguma informação, se for necessário.
   p
