--- a/server/views/emails/register/html.pug
+++ b/server/views/emails/register/html.pug
@@ -1,8 +1,8 @@
 extends ../template/default
 
 block content
-  p Caro #{name},
-  p Bem-vindo! O seu registo foi efectuado com sucesso.
+  p Caro(a) #{name},
+  p Bem-vindo(a)! O seu registo foi efectuado com sucesso.
   p Poderá agora conhecer melhor o PPR SGF Stoik Ações e o nosso projecto de impacto WeShareAShare.
 
   p
