Email with selected cause

--- a/server/views/emails/onboarding/html.pug
+++ b/server/views/emails/onboarding/html.pug
@@ -13,6 +13,8 @@ block content
   | <a href="http://www.weshareashare.org">www.weshareashare.org</a>
   |.
 
+  p A causa escolhida por si para ser apoiada é: #{causeName}.
+
   p
   | O Regulamento de Gestão PPR SGF Stoik Ações e aInformação Fundamental ao Investidor estão disponíveis em:
   | <http://a href="www.sgf.pt">Sociedade Gestora de Fundos de Pensões</a>
